@@ -1,3 +1,10 @@
+2004-01-18  Bruno Haible  <bruno@clisp.org>
+
+	* msginit.c (catalogname_for_locale): Add entries for Akan, Avaric,
+	Bambara, Cree, Divehi (Maldivian), Éwé, Igbo, Kongo, Kanuri, Ganda,
+	Luba-Katanga, Ojibwa, Venda.
+	(englishname_of_language): Likewise, and also for Fulah (Fulfulde).
+
 2004-01-09  Bruno Haible  <bruno@clisp.org>
 
 	* format.h (struct formatstring_parser): Add 'translated' argument to
